--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,16 +5,7 @@ name: CICD
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches:
-      - master
-      - staging
-      - develop
-  pull_request:
-    branches:
-      - master
-      - staging
-      - develop
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -39,6 +30,7 @@ jobs:
         run: |
           go version
           go mod download
+          docker-compose --version
 
       # Run testing on the code
       - name: Run testing
