--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,6 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CICD
+inputs:
+  commit_sha:
+    description: "Commit SHA"
+    required: false
+  image_name:
+    description: "Image"
+    required: true
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
