--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CICD 
+name: CICD ${{inputs.image_name}}
 
 
 # Controls when the action will run. Triggers the workflow on push or pull request
