--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,8 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CICD ${{inputs.image_name}}
+name: CICD
 # run-name: Build Image > Commit SHA - ${{ inputs.commit_sha }}
-run-name: "${{ inputs.commit_sha }}  | sed -rn 's/[^0-9]*([0-9]+).*/gp'"
+run-name: ${{ head -c 15 <<< "${{ inputs.commit_sha }}" }}
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
